<resources>

    <string name="app_name">OST Chooser</string>
    <string name="action_settings">Settings</string>
    <string name="default_url">file:///android_asset/index.html</string>
    <string name="notification_start_message">Starting Sharing Service</string>
    <string name="notification_title">Kiosk</string>
    <string name="notification_description">Sharing service is active</string>
    <string name="pref_atomfile">Chooser Content File</string>
    <string name="pref_atomfile_default">default.xml</string>
    <string name="add_settings_name">Chooser Settings</string>
    <string name="pref_softwarerender_title">Use software-only renderer</string>
    <string name="pref_softwarerender_summary">May fix some html5 rendering issues in some browsers (need to restart app)</string>
    <string name="pref_hostname_title">Device name</string>
    <string name="pref_hostname_summary">Name of device to use in captive portal mode</string>
    <string name="pref_hostname_default">10.0.0.1</string>
    <string name="pref_campaignid_title">Campaign ID</string>
    <string name="pref_campaignid_default"></string>
    <string name="pref_campaignid_summary">This value will be included in content download URLs to help trace triggers for downloads</string>
    <string name="pref_lowbrightness_title">Low brightness (%)</string>
    <string name="pref_lowbrightness_summary">Brightness of screen (if not automatic) in attract mode</string>
    <string name="pref_highbrightness_title">High brightness (%)</string>
    <string name="pref_highbrightness_summary">Brightness of screen (if not automatic) in normal use</string>
    <string name="zip_handler_name">Unzip to OST Chooser</string>
    <string name="zip_prompt">Update OST Chooser file cache and replace configuration with contents of zip file?</string>
    <string name="zip_button_replace">Replace</string>
    <string name="zip_button_reload">Show main UI and reload content</string>
    <string name="zip_log_title">Diagnostic output</string>
    <string name="pref_keepscreenon_title">Keep screen on</string>
    <string name="pref_keepscreenon_summary">Keep screen on if possible</string>
    <string name="pref_fullscreen_title">Show full screen</string>
    <string name="pref_fullscreen_summary">Hide notification bar in chooser view</string>
    <string name="pref_landscape_title">Force landscape orientation</string>
    <string name="pref_click_title">Sound on click</string>
    <string name="pref_click_summary">Play sound on touch events</string>
    <string name="pref_vibrate_title">Vibrate</string>
    <string name="pref_vibrate_summary">Use vibrate for touch feedback</string>
    <string name="pref_viewkiosk_title">Show main UI</string>
    <string name="pref_restartkiosk_title">Show main UI and reload content</string>
    <string name="pref_runservice_title">Keep service running</string>
    <string name="pref_runservice_summary">Keep service running to allow background downloads</string>
    <string name="pref_closekiosk_title">Close main UI</string>
    <string name="pref_closekiosk_summary">Close main UI and release service</string>
    <string name="pref_generalsettings_title">General settings</string>
    <string name="pref_kiosksettings_title">Kiosk UI settings</string>
    <string name="pref_advancedsettings_title">Advanced Settings (safe to ignore)</string>
    <string name="pref_safepreview_title">No file preview</string>
    <string name="pref_safepreview_summary">Show images for preview, do not open file</string>
    <string name="pref_demosettings_title">Test/demo settings</string>
    <string name="pref_democontent_title">Download test content</string>
    <string name="democontent_url">http://www.cs.nott.ac.uk/~cmg/GooglePlay/InformationHub/demo-content-v5.zip</string>
</resources>
