<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zip_prompt"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/buttonReplace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zip_button_replace" />

    <TextView
        android:id="@+id/zip_handler_label1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zip_log_title" />

    <TextView
        android:id="@+id/zip_handler_log"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:typeface="monospace">
    </TextView>

</LinearLayout>
